--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+
 * {
     padding: 0;
     margin: 0;
@@ -11,19 +12,27 @@ body,
     width: 100%;
 }
 
-main {
+.main {
     flex-grow: 1;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .navbarContenido {
     background-color: goldenrod;
     padding: 2rem;
+
     ul {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
         list-style: none;
+
         a {
             text-decoration: none;
             font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -33,8 +42,8 @@ main {
     }
 }
 
-footer{
-    p{
+footer {
+    p {
         text-align: center;
         background-color: grey;
         color: white;
