--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,19 @@ body,
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 2rem;
+    .contador{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        .btn-contador{
+            background-color: rgba(0, 0, 255, 0.719);
+            border-radius: 0.3rem;
+            padding: 0.5rem;
+            margin: 0.7rem;
+        }
+    }
 }
 
 
@@ -42,7 +55,7 @@ body,
     }
 }
 
-footer {
+.footer {
     p {
         text-align: center;
         background-color: grey;
