--- a/src/index.scss
+++ b/src/index.scss
@@ -23,12 +23,14 @@ body,
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    .contador{
+
+    .contador {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        .btn-contador{
+
+        .btn-contador {
             background-color: rgba(0, 0, 255, 0.719);
             border-radius: 0.3rem;
             padding: 0.5rem;
@@ -40,16 +42,19 @@ body,
 
 .navbarContenido {
     background-color: goldenrod;
-    padding: 2rem;
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 
     ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
         align-items: center;
         list-style: none;
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
 
-        a {
+        .menu-links {
             text-decoration: none;
             font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
             line-height: 1.5;
@@ -59,10 +64,45 @@ body,
 }
 
 .footer {
-    p {
-        text-align: center;
-        background-color: grey;
-        color: white;
-        padding: 0.3rem;
+    background-color: rgba(128, 128, 128, 0.582);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1.2rem;
+
+    div {
+        ul {
+            align-items: center;
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            gap: 2.5rem;
+
+            li {
+                font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+                line-height: 1.5;
+                text-transform: capitalize;
+            }
+
+            a {
+                text-decoration: none;
+                color: black;
+            }
+        }
     }
+    .logo-whatsApp{
+        width: auto;
+        height: auto;
+        
+    }
+    div{
+        p {
+            text-align: center;
+            background-color: grey;
+            color: white;
+            padding: 0.3rem;
+        }
+    }
+    
 }
