--- a/src/index.scss
+++ b/src/index.scss
@@ -108,6 +108,7 @@
                 align-items: center;
                 background-color: orange;
                 border-radius: 0.5rem;
+                border: 1px solid black;
 
                 p {
                     background-color: black;
@@ -259,12 +260,14 @@
 }
 
 .footer {
-    background-color: rgba(128, 128, 128, 0.582);
+    background-color: rgba(0, 0, 0, 0.582);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     padding: 1.2rem;
+    width: 100%;
+    height: 100%;
 
     div {
         .opciones {
@@ -286,7 +289,7 @@
 
             a {
                 text-decoration: none;
-                color: black;
+                color: rgb(251, 251, 251);
             }
         }
     }
