--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,15 @@
     background-image: url(https://images.unsplash.com/photo-1604342427523-189b17048839?q=80&w=1854&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
 
+@font-face {
+    font-family: Fuente-1;
+    src: url("../font/fantasy_magist") 
+}
+@font-face {
+    font-family: Fuente-2;
+    src: url("../font/adorage");
+}
+
 .navbar {
     background-color: goldenrod;
     padding: 1.5rem;
@@ -24,12 +33,18 @@
     flex-direction: row;
     justify-content: space-around;
     border-bottom: 1px solid black;
+    margin-bottom: 2rem;
 
     .logo {
         list-style-type: none;
         text-decoration: none;
         color: black;
         transition: 0.2s;
+        h1{
+            font-family: Fuente-2;
+            font-weight:1000;
+            font-size: 2rem;
+        }
     }
 
     .logo:hover {
@@ -57,9 +72,15 @@
             color: #9500f2;
             border-radius: 0.35rem;
         }
+    }               
+}
+.CartWidget{
+    img{
+        width: 35px;
+        height: 35px;
+        object-fit: contain;
     }
 }
-
 .main {
     display: flex;
     flex-direction: row;
@@ -69,7 +90,7 @@
 }
 
 .container {
-    background-color: gray;
+    background-color: rgba(63, 200, 231, 0.567);
     border-radius: 1rem;
     display: flex;
     flex-direction: row;
@@ -79,6 +100,8 @@
     padding-inline: 1.5rem;
     margin: auto;
     gap: 2rem;
+    padding: 1rem 0rem 1rem 0rem;
+    box-shadow: 0.5rem 0.5rem 0.5rem black;
 
     .producto-detalle {
         padding-block: 0.5rem;
@@ -147,7 +170,8 @@
 
 .producto {
     background-color: rgba(255, 255, 255, 0.273);
-    border-radius: 1rem;
+    border-radius: 1rem 0rem 1rem 0rem;
+    box-shadow: 0.4rem 0.4rem 0.75rem black;
     padding: 0.5rem;
     margin: 0.75rem;
     overflow: hidden;
@@ -158,6 +182,7 @@
         aspect-ratio: 1.5/1;
         object-fit:scale-down;
         background-color: white;
+        border-radius: 1rem 1rem 0rem 0rem;
     }
 
     div {
@@ -202,6 +227,13 @@
     align-items: center;
     gap: 1rem;
     margin-top: 1rem;
+}
+.h2-producto{
+    text-align: center;
+    text-transform: capitalize;
+    color: rgba(2, 2, 77, 0.852);
+    font-family: Fuente-1;
+    font-size: 3rem;
 }
 
 .item-count button,
@@ -259,6 +291,38 @@
     outline: 2px solid var(--clr-main);
 }
 
+.nosotros{
+    .formulario{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 2rem;
+        background-color: grey;
+        width: 400px;
+        margin: auto;
+        box-shadow: 0.5rem 0.5rem 0.5rem black;
+        height: 300px;
+        border-radius: 1rem 1rem;
+    }
+    .preguntas{
+        background-color: grey;
+        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 3rem auto;
+        padding-bottom: 2rem;
+        width: 500px;
+        box-shadow: 0.5rem 0.5rem 0.5rem black;
+        .main-title{
+            padding-bottom: 1rem;
+            text-transform: capitalize;
+        }
+    }
+}
+
 .footer {
     background-color: rgba(0, 0, 0, 0.582);
     display: flex;
@@ -268,6 +332,7 @@
     padding: 1.2rem;
     width: 100%;
     height: 100%;
+    margin-top: 2rem ;
 
     div {
         .opciones {
