--- a/src/index.scss
+++ b/src/index.scss
@@ -19,8 +19,9 @@
 
 @font-face {
     font-family: Fuente-1;
-    src: url("../font/fantasy_magist") 
+    src: url("../font/fantasy_magist")
 }
+
 @font-face {
     font-family: Fuente-2;
     src: url("../font/adorage");
@@ -40,9 +41,10 @@
         text-decoration: none;
         color: black;
         transition: 0.2s;
-        h1{
+
+        h1 {
             font-family: Fuente-2;
-            font-weight:1000;
+            font-weight: 1000;
             font-size: 2rem;
         }
     }
@@ -50,6 +52,7 @@
     .logo:hover {
         color: #9d00ff;
     }
+
     .menu {
         align-items: center;
         list-style: none;
@@ -72,15 +75,17 @@
             color: #9500f2;
             border-radius: 0.35rem;
         }
-    }               
+    }
 }
-.CartWidget{
-    img{
+
+.CartWidget {
+    img {
         width: 35px;
         height: 35px;
         object-fit: contain;
     }
 }
+
 .main {
     display: flex;
     flex-direction: row;
@@ -180,7 +185,7 @@
         width: 100%;
         height: auto;
         aspect-ratio: 1.5/1;
-        object-fit:scale-down;
+        object-fit: scale-down;
         background-color: white;
         border-radius: 1rem 1rem 0rem 0rem;
     }
@@ -228,7 +233,8 @@
     gap: 1rem;
     margin-top: 1rem;
 }
-.h2-producto{
+
+.h2-producto {
     text-align: center;
     text-transform: capitalize;
     color: rgba(2, 2, 77, 0.852);
@@ -291,8 +297,8 @@
     outline: 2px solid var(--clr-main);
 }
 
-.nosotros{
-    .formulario{
+.nosotros {
+    .formulario {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -305,7 +311,8 @@
         height: 300px;
         border-radius: 1rem 1rem;
     }
-    .preguntas{
+
+    .preguntas {
         background-color: grey;
         border-radius: 1rem;
         display: flex;
@@ -316,7 +323,8 @@
         padding-bottom: 2rem;
         width: 500px;
         box-shadow: 0.5rem 0.5rem 0.5rem black;
-        .main-title{
+
+        .main-title {
             padding-bottom: 1rem;
             text-transform: capitalize;
         }
@@ -332,7 +340,8 @@
     padding: 1.2rem;
     width: 100%;
     height: 100%;
-    margin-top: 2rem ;
+    margin-top: 2rem;
+    background-position-y: bottom ;
 
     div {
         .opciones {
@@ -368,5 +377,86 @@
         background-color: grey;
         color: black;
         padding: 0.3rem;
+    }
+}
+
+.container-carrito {
+    background-color: rgb(99, 99, 218);
+    text-align: center;
+    width: 700px;
+    margin: auto;
+    border-radius: 1rem;
+    border: 1rem solid black;
+    padding-bottom: 1rem;
+
+    .title-carrito {
+        text-decoration: underline;
+        text-transform: uppercase;
+    }
+
+    div {
+        margin: 1rem;
+        padding: 0.5rem;
+    }
+
+    .botones-finales {
+        .botones {
+            margin: 0rem;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+
+            .finalizar-compra1 {
+                padding: 0.5rem;
+                border-radius: 0.5rem;
+                background-color: red;
+                text-transform: uppercase;
+            }
+
+            .finalizar-compra2 {
+                padding: 0.5rem;
+                border-radius: 0.5rem;
+                background-color: rgb(86, 233, 81);
+                ;
+                text-transform: uppercase;
+            }
+        }
+    }
+}
+
+.formulario-final {
+    background-color: rgb(28, 154, 154);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    margin: auto;
+    border-radius: 0.5rem;
+    gap: 1rem;
+    .comprar {
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        background-color: rgb(86, 233, 81);
+        text-transform: uppercase;
+        padding: 0.75rem;
+        margin: 0.75rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.Final-compra{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(28, 154, 154);
+    p{
+        padding-bottom: 1rem;
+        text-decoration: underline;
     }
 }
